// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches snapshots 1`] = `
<GenericLink
  className={null}
  disabled={false}
  enforceA={false}
  keepScrollPosition={false}
  onClick={null}
  onMouseDown={null}
  openNewTab={false}
  replace={false}
  routerLinkType={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    }
  }
  to=""
/>
`;

exports[`Matches snapshots 2`] = `
<GenericLink
  className="-dr-pogodin-react-utils_____tests__-shared-components-NavLink-styles___navLink___CYxNuq"
  disabled={false}
  enforceA={false}
  keepScrollPosition={false}
  onClick={null}
  onMouseDown={null}
  openNewTab={false}
  replace={false}
  routerLinkType={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    }
  }
  to=""
/>
`;
